--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  sliding_up_panel: ^2.0.0+1
   hugeicons: ^1.0.0
   animated_bottom_navigation_bar: ^1.4.0
   flutter:
