--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  provider: ^6.1.5+1
+  shared_preferences: ^2.5.3
+
+  cloud_firestore: ^6.1.0
+  firebase_core: ^4.2.1
   sliding_up_panel: ^2.0.0+1
   hugeicons: ^1.0.0
   animated_bottom_navigation_bar: ^1.4.0
