--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+#  animated Toggle Button
+  animated_toggle_switch: ^0.8.5
+#  Setting Screen dependencies
+  babstrap_settings_screen: ^0.1.7
+
+
+
   provider: ^6.1.5+1
   shared_preferences: ^2.5.3
 
